@@ -1,17 +1,17 @@
-package engine.services;
+package io.jeremy.engine.services;
 
-import engine.dtos.requests.AnswerRequest;
-import engine.dtos.requests.QuizRequest;
-import engine.dtos.requests.UserRegistrationRequest;
-import engine.dtos.responses.AnswerResponse;
-import engine.dtos.responses.CompletedQuizResponse;
-import engine.dtos.responses.QuizResponse;
-import engine.model.Quiz;
-import engine.model.User;
-import engine.model.UserCompletedQuiz;
-import engine.repositories.QuizRepository;
-import engine.repositories.UserCompletedQuizRepository;
-import engine.repositories.UserRepository;
+import io.jeremy.engine.dtos.requests.AnswerRequest;
+import io.jeremy.engine.dtos.requests.QuizRequest;
+import io.jeremy.engine.dtos.requests.UserRegistrationRequest;
+import io.jeremy.engine.dtos.responses.AnswerResponse;
+import io.jeremy.engine.dtos.responses.CompletedQuizResponse;
+import io.jeremy.engine.dtos.responses.QuizResponse;
+import io.jeremy.engine.model.Quiz;
+import io.jeremy.engine.model.User;
+import io.jeremy.engine.model.UserCompletedQuiz;
+import io.jeremy.engine.repositories.QuizRepository;
+import io.jeremy.engine.repositories.UserCompletedQuizRepository;
+import io.jeremy.engine.repositories.UserRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -44,7 +44,7 @@ public class QuizService {
         return quizRepository.findById(id)
                 .map(QuizResponse::new)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
-                        "Quiz with id %d not found!".formatted(id)));
+                        String.format("Quiz with id %d not found!", id)));
     }
 
     public Page<QuizResponse> getAllQuizzes(Integer page) {
@@ -75,7 +75,7 @@ public class QuizService {
     public AnswerResponse checkQuizAnswer(long id, AnswerRequest answer, String name) {
         Quiz quiz1 = quizRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
-                        "Quiz with id %d not found!".formatted(id)));
+                        String.format("Quiz with id %d not found!",id)));
         User user = userRepository.findByUsername(name)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
